[gd_scene load_steps=6 format=3 uid="uid://cinep6l1m4ggw"]

[ext_resource type="Script" path="res://scenes/screens/screen_settings_menu.gd" id="1_jp0co"]
[ext_resource type="PackedScene" uid="uid://yenoi7637kk0" path="res://scenes/ui_components/ui_button.tscn" id="2_6q7yq"]
[ext_resource type="Script" path="res://scenes/screens/screen_settings_menu_video.gd" id="2_pbvf8"]
[ext_resource type="Script" path="res://scenes/screens/screen_settings_menu_sound.gd" id="3_rwela"]
[ext_resource type="PackedScene" uid="uid://ic0rnbqhpe38" path="res://scenes/ui_components/ui_component_slider.tscn" id="4_rkho7"]

[node name="ScreenSettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jp0co")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.31802, 0.31802, 0.31802, 1)

[node name="HBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="Main" type="MarginContainer" parent="HBoxContainer/Container"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Container/Main"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="HBoxContainer/Container/Main/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="GAME" parent="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer" instance=ExtResource("2_6q7yq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../---")
text = "GAME"

[node name="SOUND" parent="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer" instance=ExtResource("2_6q7yq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "SOUND"

[node name="VIDEO" parent="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer" instance=ExtResource("2_6q7yq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "VIDEO"

[node name="CONTROL" parent="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer" instance=ExtResource("2_6q7yq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "CONTROL"

[node name="---" parent="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer" instance=ExtResource("2_6q7yq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../GAME")
text = "---"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Views" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="VideoSettingsView" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Views"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("2_pbvf8")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Views/VideoSettingsView"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Views/VideoSettingsView/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScreenMode" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Views/VideoSettingsView/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Views/VideoSettingsView/VBoxContainer/MarginContainer/ScreenMode"]
layout_mode = 2
text = "screen mode"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/Views/VideoSettingsView/VBoxContainer/MarginContainer/ScreenMode"]
unique_name_in_owner = true
layout_mode = 2

[node name="SoundSettingsView" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Views"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("3_rwela")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView"]
layout_mode = 2

[node name="TotalVolume" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/TotalVolume"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/TotalVolume/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/TotalVolume/HBox/Control"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 81.0
offset_bottom = 29.0
text = "TOTAL_VOLUME"

[node name="SliderComponent" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/TotalVolume/HBox" instance=ExtResource("4_rkho7")]
layout_mode = 2

[node name="MusicVolume" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/MusicVolume"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/MusicVolume/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/MusicVolume/HBox/Control"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 89.0
offset_bottom = 29.0
text = "MUSIC_VOLUME"

[node name="SliderComponent" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/MusicVolume/HBox" instance=ExtResource("4_rkho7")]
layout_mode = 2

[node name="MusicFlag" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/MusicFlag"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/MusicFlag/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/MusicFlag/HBox/Control"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 89.0
offset_bottom = 29.0
text = "MUSIC"

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/MusicFlag/HBox"]
layout_mode = 2

[node name="AudioFlag" type="MarginContainer" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBox" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/AudioFlag"]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/AudioFlag/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/AudioFlag/HBox/Control"]
layout_mode = 2
offset_left = 4.0
offset_top = 4.0
offset_right = 89.0
offset_bottom = 29.0
text = "AUDIO"

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/VBoxContainer/Views/SoundSettingsView/VBoxContainer/AudioFlag/HBox"]
layout_mode = 2

[node name="Back" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_6q7yq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_neighbor_bottom = NodePath("../../Container/Main/HBoxContainer/VBoxContainer/GAME")
text = "[ESC] BACK"

[connection signal="pressed" from="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer/GAME" to="." method="_on_video_pressed"]
[connection signal="pressed" from="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer/SOUND" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer/VIDEO" to="." method="_on_video_pressed"]
[connection signal="pressed" from="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer/CONTROL" to="." method="_on_video_pressed"]
[connection signal="pressed" from="HBoxContainer/Container/Main/HBoxContainer/VBoxContainer/---" to="." method="_on_video_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
